--- a/Messenger2/Messenger2.vbproj
+++ b/Messenger2/Messenger2.vbproj
@@ -295,7 +295,7 @@
     <Content Include="ViewSwitcher.ascx" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="Z:\Folders\Documents\GitHub\Framework\Framework\Framework.vbproj">
+    <ProjectReference Include="..\..\Framework\Framework\Framework.vbproj">
       <Project>{8a2b93b9-4651-40f3-bbf9-d8fd0474a719}</Project>
       <Name>Framework</Name>
     </ProjectReference>
