--- a/Messenger2/Messenger2.vbproj
+++ b/Messenger2/Messenger2.vbproj
@@ -172,6 +172,7 @@
     </Content>
     <None Include="My Project\PublishProfiles\Test Profile.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Notifications.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
