--- a/Messenger2/Web.config
+++ b/Messenger2/Web.config
@@ -7,7 +7,9 @@
   <system.web>
     <customErrors mode="Off"/>
     <compilation debug="true" strict="false" explicit="true" targetFramework="4.5.2" />
-    <httpRuntime targetFramework="4.5.2" />
+    <httpRuntime 
+      targetFramework="4.5.2"
+      maxRequestLength="11264" />
     <authentication mode="Windows" />
     <authorization>
       <deny users="?" />
