--- a/Messenger2/Messenger2.vbproj
+++ b/Messenger2/Messenger2.vbproj
@@ -172,6 +172,7 @@
     </Content>
     <None Include="My Project\PublishProfiles\Test Profile.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Messenger.css" />
     <Content Include="Notifications.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -205,7 +206,9 @@
     <Content Include="Default.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Bundle.config" />
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
